[package]
name = "chromaprint-sys"
version = "1.5.0"
edition = "2021"
build = "build.rs"
links = "chromaprint"
authors = ["Assil Ksiksi <assil@ksiksi.net>"]
description = "Rust bindings to Chromaprint"
keywords = ["audio"]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.60"
cfg-if = "1"
cmake = "0.1"

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2"

[target.'cfg(unix)'.build-dependencies]
pkg-config = "0.3"

[features]
default = []
static = []
dynamic = []

# FFT version to use when building from source.
# Note: only one of these should be set.
avfft = []
fftw3 = []
fftw3f = []
kissfft = []
vdsp = []

# Info for cargo-vcpkg
[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "cef0b3ec767df6e83806899fe9525f6cf8d7bc91"

[package.metadata.vcpkg.target]
# Dynamic linking only on Windows.
x86_64-pc-windows-msvc = { triplet = "x64-windows", dependencies = ["chromaprint"] }

