[package]
name = "chromaprint-sys-next"
# major.minor indicates library version
# patch indicates the crate version
version = "1.6.0"
edition = "2021"
description = "Rust bindings to Chromaprint"
authors = ["Assil Ksiksi <assil@ksiksi.net>"]
build = "build.rs"
links = "chromaprint"
readme = "README.md"
homepage = "https://github.com/aksiksi/chromaprint-sys"
repository = "https://github.com/aksiksi/chromaprint-sys"
license = "MIT"
keywords = ["audio", "fingerprinting"]
categories = ["multimedia::audio"]
exclude = [
  # Test files
  "src/chromaprint/tests/data/*",
]

[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.72.1"
cfg-if = "1"
cmake = "0.1"
pkg-config = "0.3"

[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2"

[features]
default = []
static = []

# FFT version to use when building from source.
# Note: only one of these should be set.
avfft = []
fftw3 = []
fftw3f = []
kissfft = []
vdsp = []

# Info for cargo-vcpkg
[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "cef0b3ec767df6e83806899fe9525f6cf8d7bc91"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md", dependencies = ["chromaprint"] }
